chore: rename InstanceUrl to DidDomainName

--- a/.ci/appsettings.override.postgres.json
+++ b/.ci/appsettings.override.postgres.json
@@ -40,7 +40,7 @@
         },
         "Devices": {
             "Application": {
-                "InstanceUrl": "localhost"
+                "DidDomainName": "localhost"
             },
             "Infrastructure": {
                 "SqlDatabase": {
@@ -70,7 +70,7 @@
         },
         "Messages": {
             "Application": {
-                "InstanceUrl": "localhost"
+                "DidDomainName": "localhost"
             },
             "Infrastructure": {
                 "SqlDatabase": {
