--- a/AdminApi/src/AdminApi/appsettings.override.json
+++ b/AdminApi/src/AdminApi/appsettings.override.json
@@ -41,7 +41,7 @@
         },
         "Devices": {
             "Application": {
-                "InstanceUrl": "localhost"
+                "DidDomainName": "localhost"
             },
             "Infrastructure": {
                 "SqlDatabase": {
