--- a/ConsumerApi/appsettings.json
+++ b/ConsumerApi/appsettings.json
@@ -28,7 +28,7 @@
         },
         "Devices": {
             "Application": {
-                "InstanceUrl": "localhost",
+                "DidDomainName": "localhost",
                 "Pagination": {
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
@@ -45,7 +45,7 @@
         },
         "Messages": {
             "Application": {
-                "InstanceUrl": "localhost",
+                "DidDomainName": "localhost",
                 "MaxNumberOfUnreceivedMessagesFromOneSender": 20,
                 "Pagination": {
                     "DefaultPageSize": 50,
