--- a/Jobs/src/Job.IdentityDeletion/appsettings.override.json
+++ b/Jobs/src/Job.IdentityDeletion/appsettings.override.json
@@ -33,7 +33,7 @@
         },
         "Devices": {
             "Application": {
-                "InstanceUrl": "localhost"
+                "DidDomainName": "localhost"
             },
             "Infrastructure": {
                 "SqlDatabase": {
