--- a/SseServer/src/SseServer/appsettings.override.json
+++ b/SseServer/src/SseServer/appsettings.override.json
@@ -19,7 +19,7 @@
     "Modules": {
         "Devices": {
             "Application": {
-                "InstanceUrl": "localhost"
+                "DidDomainName": "localhost"
             },
             "Infrastructure": {
                 "SqlDatabase": {
