--- a/docker-compose/adminui.appsettings.override.json
+++ b/docker-compose/adminui.appsettings.override.json
@@ -40,7 +40,7 @@
         },
         "Devices": {
             "Application": {
-                "InstanceUrl": "localhost"
+                "DidDomainName": "localhost"
             },
             "Infrastructure": {
                 "SqlDatabase": {
