--- a/docker-compose/consumerapi.appsettings.override.json
+++ b/docker-compose/consumerapi.appsettings.override.json
@@ -45,7 +45,7 @@
         },
         "Devices": {
             "Application": {
-                "InstanceUrl": "localhost"
+                "DidDomainName": "localhost"
             },
             "Infrastructure": {
                 "SqlDatabase": {
