chore: Rename InstanceUrl to DidDomainName

--- a/appsettings.override.json
+++ b/appsettings.override.json
@@ -54,7 +54,7 @@
     },
     "Devices": {
       "Application": {
-        "InstanceUrl": "localhost"
+        "DidDomainName": "localhost"
       },
       "Infrastructure": {
         "SqlDatabase": {
@@ -91,7 +91,7 @@
     },
     "Messages": {
       "Application": {
-        "InstanceUrl": "localhost"
+        "DidDomainName": "localhost"
       },
       "Infrastructure": {
         "SqlDatabase": {
