Use a central configuration file across all projects (#708)
* chore: Add common appsettings.override.json (except AdminAPI)

* chore: Reference common appsettings.override.json from programs

* chore: Add questions for AdminApi appsettings.override.json

* chore: Finalize common appsettings.override.json

* fix: Use previous path for override json

* chore: Remove docker build summary

* chore: EventHandlerService: Remove own override file, change working directory, add build event to copy central file

* Fix: Only let copy command run in debug configuration

* chore: Re-add docker build summary, use own PR for the removal

* chore: Use MSBuild property for copy checking

* chore: Make appsettings.override file optional again

* chore: Remove specific override files

* chore: Remove custom property from Dockerfile

* chore: Set working directory for local builds

* chore: Include common override file into project (debug only)

* chore: Remove unnecessary whitespace

* chore: Move Content statements into own ItemGroups

* chore: use TargetFramework property for working directory

* chore: Add instanceUrl to common appsettings override

* chore: Remove separate appsettings override files

* chore: Rename InstanceUrl to DidDomainName

* chore: Remove unnecessary comment

---------

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/ConsumerApi/ConsumerApi.csproj
+++ b/ConsumerApi/ConsumerApi.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <UserSecretsId>f114fba8-95dd-4fee-8385-af8e8a343c68</UserSecretsId>
     </PropertyGroup>
-
+    
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="8.0.2"/>
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0"/>
@@ -44,4 +44,9 @@
         <ProjectReference Include="..\Modules\Tokens\src\Tokens.ConsumerApi\Tokens.ConsumerApi.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="..\appsettings.override.json" Condition="$(Configuration) == Debug">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 </Project>
