--- a/Modules/Files/src/Files.Jobs.SanityCheck/Files.Jobs.SanityCheck.csproj
+++ b/Modules/Files/src/Files.Jobs.SanityCheck/Files.Jobs.SanityCheck.csproj
@@ -16,4 +16,10 @@
         <ProjectReference Include="..\Files.Infrastructure\Files.Infrastructure.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="..\..\..\..\appsettings.override.json" Condition="$(Configuration) == Debug">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
 </Project>
