--- a/SseServer/src/SseServer/Properties/launchSettings.json
+++ b/SseServer/src/SseServer/Properties/launchSettings.json
@@ -6,7 +6,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Local",
         "ASPNETCORE_URLS": "http://*:8083"
-      }
+      },
+      "workingDirectory": "bin/Debug/$(TargetFramework)"
     }
   }
 }
