--- a/AdminApi/src/AdminApi/AdminApi.csproj
+++ b/AdminApi/src/AdminApi/AdminApi.csproj
@@ -56,6 +56,11 @@
     <ItemGroup>
         <Folder Include="ClientApp\src\"/>
     </ItemGroup>
+    <ItemGroup>
+        <Content Include="..\..\..\appsettings.override.json" Condition="$(Configuration) == Debug">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
         <!-- Ensure Node.js is installed -->
