--- a/EventHandlerService/src/EventHandlerService/Properties/launchSettings.json
+++ b/EventHandlerService/src/EventHandlerService/Properties/launchSettings.json
@@ -4,7 +4,8 @@
     "Default": {
       "commandName": "Project",
       "environmentVariables": {
-      }
+      },
+      "workingDirectory": "bin/Debug/$(TargetFramework)"
     }
   }
 }
