ci: add appsettings for integration tests of identity deletion job

--- a/.ci/docker-compose.test.postgres.yml
+++ b/.ci/docker-compose.test.postgres.yml
@@ -36,7 +36,7 @@ services:
 
 configs:
   Config:
-    file: appsettings.override.postgres.json
+    file: appsettings.override.postgres.docker.json
 
 networks:
   default:
