ci: add dependency from admin-cli to database-migrator

--- a/.ci/compose.test.yml
+++ b/.ci/compose.test.yml
@@ -63,6 +63,9 @@ services:
   admin-cli:
     container_name: admin-cli-test
     image: admin-cli:0.0.1
+    depends_on:
+      database-migrator:
+        condition: service_completed_successfully
     command: backbone client create --clientId test --clientSecret test --defaultTier Basic
 
 networks:
