ci: add remaining integration tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -195,6 +195,11 @@ jobs:
           - display-name: AdminApi
             path: AdminApi/test/AdminApi.Tests.Integration
             additional-compose-files: -f ./.ci/compose.test.aui.yml -f ./.ci/compose.test.capi.yml
+          - display-name: ConsumerApi
+            path: ConsumerApi.Tests.Integration
+            additional-compose-files: -f ./.ci/compose.test.capi.yml
+          - display-name: IdentityDeletionJob
+            path: Jobs/test/Job.IdentityDeletion.Tests.Integration
           # - ConsumerApi.Tests.Integration
           # - Job.IdentityDeletion.Tests.Integration
     needs: image-test-builds
