ci: let admin-cli depend on consumer-api

--- a/.ci/compose.test.yml
+++ b/.ci/compose.test.yml
@@ -71,6 +71,8 @@ services:
     depends_on:
       database-migrator:
         condition: service_completed_successfully
+      consumer-api:
+        condition: service_healthy
     command: backbone client create --clientId test --clientSecret test --defaultTier Basic
 
 networks:
